<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <ImageView android:id="@+id/imgLogo"
        android:contentDescription="@string/image_desc"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/head"
        android:layout_margin="10dp"/>
        
        <LinearLayout android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            
            <TextView android:id="@+id/txtName"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/defaul_Name"
	            android:textSize="24sp"
	            android:textColor="#000000"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="5dp"/>
            
             <LinearLayout android:id="@+id/linearLayout3"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:orientation="horizontal">
            
	            <TextView android:id="@+id/txtStatus"
		            android:layout_width="650dp"
		            android:layout_height="wrap_content"
		            android:text="@string/defaul_Status"
		            android:textSize="16sp"
		            android:textColor="#999999"
		            android:layout_marginLeft="10dp"/>
	            
	            <ImageView android:id="@+id/notificationSign"
			        android:contentDescription="@string/image_desc"
			        android:layout_width="20dp"
			        android:layout_height="fill_parent"
			        android:src="@drawable/exclamation_mark"
			        android:layout_margin="10dp"/>
	            
              </LinearLayout>  
             
             
        </LinearLayout>
        
        
            
</LinearLayout>